--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@shm-open/code-push-server",
+  "name": "@grupoinfoshop/code-push-server",
   "description": "CodePush service is hotupdate services which adapter react-native-code-push and cordova-plugin-code-push",
   "version": "2.1.6",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/shm-open/code-push-server.git"
+    "url": "git+https://github.com/grupoinfoshop/code-push-server.git"
   },
   "keywords": [
     "code-push",
