--- a/package.json
+++ b/package.json
@@ -39,6 +39,19 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "protobufjs": "^6.11.3",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.35",
+    "vm2": "^3.9.11",
+    "minimatch": "^3.0.5",
+    "qs": "^6.9.7",
+    "jsonwebtoken": "^9.0.0",
+    "json5": "^2.2.2",
+    "sequelize": "^6.28.1",
+    "minimist": "^1.2.6",
+    "xml2js": "^0.5.0",
+    "dottie": "^2.0.4",
+    "tough-cookie": "^4.1.3",
     "aliyun-oss-upload-stream": "1.3.0",
     "aliyun-sdk": "1.12.4",
     "aws-sdk": "2.1176.0",
@@ -52,10 +65,8 @@
     "fs-extra": "10.1.0",
     "helmet": "5.1.0",
     "i18n": "0.15.0",
-    "jsonwebtoken": "8.5.1",
     "kv-logger": "0.5.3",
     "lodash": "4.17.21",
-    "moment": "2.29.3",
     "mysql2": "2.3.3",
     "node-fetch": "2.6.7",
     "nodemailer": "6.7.7",
@@ -64,7 +75,6 @@
     "rand-token": "1.0.1",
     "recursive-readdir": "2.2.2",
     "redis": "4.2.0",
-    "sequelize": "6.21.3",
     "slash": "3.0.0",
     "validator": "13.7.0",
     "yargs": "17.5.1",
